Add Fisher-Yates shuffle to eliminate systematic Z-depth ordering bias

--- a/index.html
+++ b/index.html
@@ -139,13 +139,37 @@
 
       console.log(`Created ${particleCount} particles`);
 
-      // Create geometry
+      // Shuffle particles to eliminate systematic ordering bias
+      const indices = Array.from({ length: particleCount }, (_, i) => i);
+
+      // Fisher-Yates shuffle
+      for (let i = indices.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [indices[i], indices[j]] = [indices[j], indices[i]];
+      }
+
+      const shuffledPositions = new Float32Array(particleCount * 3);
+      const shuffledColors = new Float32Array(particleCount * 3);
+      const shuffledCloudZ = new Float32Array(particleCount);
+
+      for (let i = 0; i < particleCount; i++) {
+        const srcIdx = indices[i];
+        shuffledPositions[i * 3] = positions[srcIdx * 3];
+        shuffledPositions[i * 3 + 1] = positions[srcIdx * 3 + 1];
+        shuffledPositions[i * 3 + 2] = positions[srcIdx * 3 + 2];
+        shuffledColors[i * 3] = colors[srcIdx * 3];
+        shuffledColors[i * 3 + 1] = colors[srcIdx * 3 + 1];
+        shuffledColors[i * 3 + 2] = colors[srcIdx * 3 + 2];
+        shuffledCloudZ[i] = cloudZPositions[srcIdx];
+      }
+
+      // Create geometry with shuffled data
       const geometry = new THREE.BufferGeometry();
-      geometry.setAttribute('position', new THREE.Float32BufferAttribute(positions, 3));
-      geometry.setAttribute('color', new THREE.Float32BufferAttribute(colors, 3));
+      geometry.setAttribute('position', new THREE.Float32BufferAttribute(shuffledPositions, 3));
+      geometry.setAttribute('color', new THREE.Float32BufferAttribute(shuffledColors, 3));
 
       // Store cloud Z positions for morphing
-      originalCloudZ = new Float32Array(cloudZPositions);
+      originalCloudZ = shuffledCloudZ;
 
       // Material
       const material = new THREE.PointsMaterial({
