--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     // ============ CONFIGURATION ============
     const IMAGE_PATH = 'tobias-keller-73F4pKoUkM0-unsplash.jpg';
 
-    // Particle density - sample almost every pixel for maximum clarity
-    const SAMPLE_STEP = 1.5;  // Denser sampling for sharper image
+    // Particle density - balanced for clarity and performance
+    const SAMPLE_STEP = 2;  // Good balance
 
     // Depth range when in cloud mode (scattered in Z)
     const CLOUD_DEPTH = 24;  // 4x the original depth (was 6)
@@ -66,7 +66,7 @@
     const IMAGE_VIEW_DISTANCE = 15;
 
     // Particle appearance
-    const PARTICLE_SIZE = 0.045;  // Smaller for finer detail
+    const PARTICLE_SIZE = 0.08;  // Larger particles for clear image
 
     // ============ SCENE SETUP ============
     const scene = new THREE.Scene();
@@ -176,7 +176,7 @@
         size: PARTICLE_SIZE,
         vertexColors: true,
         transparent: true,
-        opacity: 0.4,  // Much lower opacity to prevent color oversaturation
+        opacity: 0.75,  // Higher opacity with larger particles for solid colors
         sizeAttenuation: true,
         depthWrite: false
       });
@@ -267,8 +267,8 @@
       // Make particles larger as we scale up to fill gaps
       material.size = PARTICLE_SIZE * scale * 1.2;
 
-      // Lower opacity with denser particles for accurate colors
-      material.opacity = 0.4;
+      // Higher opacity with balanced particles for solid colors
+      material.opacity = 0.75;
 
       renderer.render(scene, camera);
     }
