--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     const IMAGE_PATH = 'tobias-keller-73F4pKoUkM0-unsplash.jpg';
 
     // Particle density - balanced for clarity and performance
-    const SAMPLE_STEP = 2;  // Good balance
+    const SAMPLE_STEP = 2.5;  // Less dense for better performance
 
     // Depth range when in cloud mode (scattered in Z)
     const CLOUD_DEPTH = 24;  // 4x the original depth (was 6)
@@ -66,7 +66,7 @@
     const IMAGE_VIEW_DISTANCE = 15;
 
     // Particle appearance
-    const PARTICLE_SIZE = 0.08;  // Larger particles for clear image
+    const PARTICLE_SIZE = 0.055;  // Smaller base size
 
     // ============ SCENE SETUP ============
     const scene = new THREE.Scene();
@@ -264,8 +264,8 @@
       // Adjust particle size and opacity to prevent grid artifacts
       const material = points.material;
 
-      // Make particles larger as we scale up to fill gaps
-      material.size = PARTICLE_SIZE * scale * 1.2;
+      // Make particles grow with scale but keep them smaller
+      material.size = PARTICLE_SIZE * scale * 1.5;
 
       // Higher opacity with balanced particles for solid colors
       material.opacity = 0.75;
