--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     // ============ CONFIGURATION ============
     const IMAGE_PATH = 'tobias-keller-73F4pKoUkM0-unsplash.jpg';
 
-    // Particle density - same as koi settings
-    const SAMPLE_STEP = 2;
+    // Particle density - very dense for crystal clear image
+    const SAMPLE_STEP = 1;  // Sample every pixel for maximum clarity
 
     // Depth range when in cloud mode (scattered in Z)
     const CLOUD_DEPTH = 24;  // 4x the original depth (was 6)
@@ -65,8 +65,8 @@
     // Distance where image is fully resolved and clear
     const IMAGE_VIEW_DISTANCE = 15;
 
-    // Particle appearance - same as koi settings
-    const PARTICLE_SIZE = 0.06;
+    // Particle appearance - tiny particles for sharp detail
+    const PARTICLE_SIZE = 0.03;
 
     // ============ SCENE SETUP ============
     const scene = new THREE.Scene();
@@ -171,12 +171,12 @@
       // Store cloud Z positions for morphing
       originalCloudZ = shuffledCloudZ;
 
-      // Material - same as koi settings
+      // Material - lower opacity for dense tiny particles
       const material = new THREE.PointsMaterial({
         size: PARTICLE_SIZE,
         vertexColors: true,
         transparent: true,
-        opacity: 0.8,
+        opacity: 0.3,  // Much lower with very dense particles
         sizeAttenuation: true,
         depthWrite: false
       });
@@ -264,11 +264,11 @@
       // Adjust particle size and opacity to prevent grid artifacts
       const material = points.material;
 
-      // Make particles grow with scale - same as koi settings
-      material.size = PARTICLE_SIZE * scale * 1.2;
+      // Make particles grow significantly with scale for clear image
+      material.size = PARTICLE_SIZE * scale * 2.5;
 
-      // Same opacity as koi settings
-      material.opacity = 0.85;
+      // Lower opacity for dense particles
+      material.opacity = 0.3;
 
       renderer.render(scene, camera);
     }
